# birdy

./: .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
src/: arrow.rs  blend.rs  blur.rs  circle.rs  keycode_to_text.rs  line.rs  main.rs  point.rs  rectangle.rs  renderer.rs  text.rs  triangle.rs
